force-app/main/default/objects/Practice__c/Practice__c.object-meta.xml
<CustomObject>
    <description>Team practice session</description>
    <label>Practice</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Practice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Practices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>