force-app/main/default/objects/Practice__c/fields/Arena__c.field-meta.xml
<CustomField>
    <fullName>Arena__c</fullName>
    <label>Arena</label>
    <referenceTo>Arena__c</referenceTo>
    <relationshipLabel>Practices</relationshipLabel>
    <relationshipName>Practices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>