force-app/main/default/objects/Practice__c/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <label>Date Time</label>
    <type>DateTime</type>
</CustomField>