force-app/main/default/objects/Practice__c/fields/Practice_Type__c.field-meta.xml
<CustomField>
    <fullName>Practice_Type__c</fullName>
    <label>Practice Type</label>
    <picklist>
        <picklistValues>
            <fullName>Full Practice</fullName>
            <default>true</default>
            <label>Full Practice</label>
        </picklistValues>
        <picklistValues>
            <fullName>Skills</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Conditioning</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Scrimmage</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>