force-app/main/default/objects/Practice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <picklist>
        <picklistValues>
            <fullName>Scheduled</fullName>
            <default>true</default>
        </picklistValues>
        <picklistValues>
            <fullName>Completed</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Cancelled</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>