force-app/main/default/objects/Practice__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Practices</relationshipLabel>
    <relationshipName>Practices</relationshipName>
    <type>Lookup</type>
</CustomField>